force-app/main/default/objects/Portfolio_Equipment__c/Portfolio_Equipment__c.object-meta.xml
<CustomObject>
    <label>Portfolio Equipment</label>
    <nameField>
        <displayFormat>PEQ-{00000000}</displayFormat>
        <label>Portfolio Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>