force-app/main/default/objects/Portfolio_Equipment__c/fields/assetAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>assetAddressLine1__c</fullName>
    <label>assetAddressLine1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>