force-app/main/default/objects/Portfolio_Equipment__c/fields/assetAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>assetAddressLine2__c</fullName>
    <label>assetAddressLine2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>