force-app/main/default/objects/Portfolio_Equipment__c/fields/assetCity__c.field-meta.xml
<CustomField>
    <fullName>assetCity</fullName>
    <label>assetCity/label>
    <length>100</length>
    <type>Text</type>
</CustomField>