force-app/main/default/objects/Portfolio_Equipment__c/fields/assetDescription__c.field-meta.xml
<CustomField>
    <fullName>assetDescription__c</fullName>
    <label>assetDescription</label>
    <length>100</length>
    <type>Text</type>
</CustomField>