force-app/main/default/objects/Portfolio_Equipment__c/fields/assetManufacturer__c.field-meta.xml
<CustomField>
    <fullName>assetManufacturer__c</fullName>
    <label>assetManufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>