force-app/main/default/objects/Portfolio_Equipment__c/fields/assetModel__c.field-meta.xml
<CustomField>
    <fullName>assetModel__c</fullName>
    <label>assetModel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>