force-app/main/default/objects/Portfolio_Equipment__c/fields/assetPayment__c.field-meta.xml
<CustomField>
    <fullName>assetPayment__c</fullName>
    <label>assetPayment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>