force-app/main/default/objects/Portfolio_Equipment__c/fields/assetSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>assetSequenceNumber__c</fullName>
    <label>assetSequenceNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>