force-app/main/default/objects/Portfolio_Equipment__c/fields/assetSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>assetSerialNumber__c</fullName>
    <label>assetSerialNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>