force-app/main/default/objects/Portfolio_Equipment__c/fields/assetState__c.field-meta.xml
<CustomField>
    <fullName>assetState__c</fullName>
    <label>assetState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>