force-app/main/default/objects/Portfolio_Equipment__c/fields/assetZipCode__c.field-meta.xml
<CustomField>
    <fullName>assetZipCode__c</fullName>
    <label>assetZipCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>