force-app/main/default/objects/Portfolio_Equipment__c/fields/Portfolio_Contract__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Contract__c</fullName>
    <label>Portfolio Contract</label>
    <referenceTo>Portfolio_Contract__c</referenceTo>
    <relationshipLabel>Portfolio Equipment</relationshipLabel>
    <relationshipName>Portfolio_Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>